--- a/site.yml
+++ b/site.yml
@@ -18,7 +18,7 @@ cpus: 1
 #
 hostname: www.w-tokyodo.dev
 ip: 192.168.33.200
-sync_folder: 'www/wordpress'
+sync_folder: 'www.w-tokyodo.dev'
 
 #
 # WordPress Settings
@@ -32,7 +32,7 @@ rewrite_structure: /%category%/%post_id%
 #
 # WordPress Path
 #
-document_root: '/var/www/wordpress'
+document_root: '/var/www.w-tokyodo.dev'
 wp_home: ''     # Path to the WP_HOME like "wp"
 wp_siteurl: 'wstd'  # Path to the WP_SITEURL like "wp"
 
